                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0
  [Remove entries to the current 2.0 and 2.2 section below, when backported]

  *) mod_ssl: Add support for caching SSL Sessions in memcached. [Paul Querna]

  *) SECURITY: CVE-2007-1862 (cve.mitre.org)
     mod_mem_cache: Copy headers into longer lived storage; header names and 
     values could previously point to cleaned up storage
     PR 41551 [Davi Arnaut <davi haxent.com.br>]

  *) mod_cache: Do not set Date or Expires when they are missing from
     the original response or are invalid.  [Justin Erenkrantz]

  *) mod_cache: Correctly handle HEAD requests on expired cache content.
     PR 41230.  [Niklas Edmundsson]

  *) mod_proxy: Added ProxyPassMatch directive, which is similar
     to ProxyPass but takes a regex local path prefix. [Jim Jagielski]

  *) mod_so: Solve dev's confusion by reporting expected/seen module
     magic signatures when failing with a 'garbled' message, and solve
     user's confusion by pointing out 'perhaps compiled for a different
     version of apache?'.  [William Rowe]

  *) mod_ssl: Version reporting update; displays 'compiled against'
     Apache and build-time SSL Library versions at loglevel [info],
     while reporting the run-time SSL Library version in the server
     info tags.  Helps to identify a mod_ssl built against one flavor
     of OpenSSL but running against another (also adds SSL-C version
     number reporting.)  [William Rowe]

  *) core: Change etag generation to produce identical results on 
     32-bit and 64-bit platforms.  PR 40064.  [Joe Orton]

  *) ab: Add -r option to continue after socket receive errors. 
     [Filip Hanik <devlist hanik.com>]

  *) mod_ldap: Fix the search limit parameter to ldap_search_ext_s()
     for SDKs that define LDAP_NO_LIMIT to something other than -1.
     [David Jones <oscaremma gmail.com>]

  *) mod_dbd: Introduce configuration groups to allow inheritance by virtual